examples/parser/peg-0.1.18/examples/rule.peg
start	<- abcd+

abcd	<- 'a' { printf("A %d\n", yypos); } bc { printf("ABC %d\n", yypos); }
	 / 'b' { printf("B %d\n", yypos); } cd { printf("BCD %d\n", yypos); }

bc	<- 'b' { printf("B %d\n", yypos); } 'c' { printf("C %d\n", yypos); }

cd	<- 'c' { printf("C %d\n", yypos); } 'd' { printf("D %d\n", yypos); }
